--- a/simple-ball/src/index.html
+++ b/simple-ball/src/index.html
@@ -7,6 +7,6 @@
     <script type="module" src="app.js"></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <canvas id="canvas" width="600" height="600"></canvas>
   </body>
 </html>
