--- a/simple-ball/src/index.html
+++ b/simple-ball/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Simple Ball</title>
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./app.js"></script>
   </head>
   <body>
     <canvas id="canvas" width="600" height="600"></canvas>
