--- a/simple-ball/index.html
+++ b/simple-ball/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Simple Ball</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="./app.js"></script>
+    <link rel="stylesheet" href="./src/styles.css" />
+    <script type="module" src="./src/app.js"></script>
   </head>
   <body>
     <canvas id="canvas" width="600" height="600"></canvas>
