add display of alpha/beta/gamma

--- a/simple-ball/index.html
+++ b/simple-ball/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <canvas id="canvas" width="600" height="600"></canvas>
+    <div>
+      Alpha: <span id="alpha">None</span>, Beta: <span id="beta">None</span>,
+      Gamma: <span id="gamma">None</span>
+    </div>
   </body>
 </html>
