--- a/simple-ball/index.html
+++ b/simple-ball/index.html
@@ -9,8 +9,14 @@
   <body>
     <canvas id="canvas" width="600" height="600"></canvas>
     <div>
-      Alpha: <span id="alpha">None</span>, Beta: <span id="beta">None</span>,
-      Gamma: <span id="gamma">None</span>
+      Motion: Alpha: <span id="motion_alpha">None</span>, Beta:
+      <span id="motion_beta">None</span>, Gamma:
+      <span id="motion_gamma">None</span>
+    </div>
+    <div>
+      Orientation: Alpha: <span id="orientation_alpha">None</span>, Beta:
+      <span id="orientation_beta">None</span>, Gamma:
+      <span id="orientation_gamma">None</span>
     </div>
   </body>
 </html>
