--- a/simple-ball/index.html
+++ b/simple-ball/index.html
@@ -18,5 +18,6 @@
       <span id="orientation_beta">None</span>, Gamma:
       <span id="orientation_gamma">None</span>
     </div>
+    <button id="enable">Enable</button>
   </body>
 </html>
