show force numbers

--- a/simple-ball/index.html
+++ b/simple-ball/index.html
@@ -9,9 +9,33 @@
   <body>
     <canvas id="canvas" width="600" height="600"></canvas>
     <div>
-      Motion: Alpha: <span id="motion_alpha">None</span>, Beta:
-      <span id="motion_beta">None</span>, Gamma:
-      <span id="motion_gamma">None</span>
+      <h2>Force</h2>
+      <table>
+        <tr>
+          <td>Apply</td>
+          <td>
+            <span id="force_apply">None</span>
+          </td>
+        </tr>
+        <tr>
+          <td>X</td>
+          <td>
+            <span id="force_x">None</span>
+          </td>
+        </tr>
+        <tr>
+          <td>Y</td>
+          <td>
+            <span id="force_y">None</span>
+          </td>
+        </tr>
+        <tr>
+          <td>Max</td>
+          <td>
+            <span id="force_max">None</span>
+          </td>
+        </tr>
+      </table>
     </div>
     <div>
       Orientation: Alpha: <span id="orientation_alpha">None</span>, Beta:
