show sensor values, add reset

--- a/simple-ball/index.html
+++ b/simple-ball/index.html
@@ -38,10 +38,35 @@
       </table>
     </div>
     <div>
-      Orientation: Alpha: <span id="orientation_alpha">None</span>, Beta:
-      <span id="orientation_beta">None</span>, Gamma:
-      <span id="orientation_gamma">None</span>
+      <h2>Sensor</h2>
+      <button id="enable">Enable</button>
+      <button id="reset" disabled="true">Reset</button>
+      <table>
+        <tr>
+          <td>Initial Beta</td>
+          <td>
+            <span id="initial_beta">None</span>
+          </td>
+        </tr>
+        <tr>
+          <td>Initial Gamma</td>
+          <td>
+            <span id="initial_gamma">None</span>
+          </td>
+        </tr>
+        <tr>
+          <td>Current Beta</td>
+          <td>
+            <span id="current_beta">None</span>
+          </td>
+        </tr>
+        <tr>
+          <td>Current Gamma</td>
+          <td>
+            <span id="current_gamma">None</span>
+          </td>
+        </tr>
+      </table>
     </div>
-    <button id="enable">Enable</button>
   </body>
 </html>
